# mazegeneratorsolver

./: .gitignore  .replit  Cargo.toml
.cargo/: .global-cache
src/: main.rs
