[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adjacent-pair-iterator = "1.0.0"
ndarray = "0.17.0"
rand = "0.9.2"
strum = "0.27.2"
strum_macros = "0.27.2"
